# colombia-kidnap-analysis-forecast

./: README.md  Referencias APA.txt  pyproject.toml
Cuadernos Jupyter/: 1. Primer_analisis_exploratorio.ipynb  3. Analisis Avanzado.ipynb
Datos/: Base_Final.csv  Base_para_ML.csv  Cais.csv  Eventos_de_Violencia_del_Conflicto_Armado_Masacres.csv  Frentes de seguridad.csv  Poblacion 1993-2004.xlsx  Poblacion 2005-2019.xlsx  Poblacion 2020-2025.xlsx  Poblacion-Mun 1995-2004.xlsx  Poblacion-Mun 2005-2019.xlsx  Poblacion-Mun 2020-2025.xlsx  SECUESTRO_20250630.csv  Tipología de los municipios de Colombia según el conflicto armado interno.xlsx
Scripts/: construccion_bases_series.py
Showcase_Widegts/: desktop.ini
