[project]
name = "Proyecto 1 Seminario Programacion"
version = "0.1.0"
description = "Exploracion y modelamiento de los secuestos en Colombia"
authors = [
    {name = "Pablo Reyes",email = "alejogranados229@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "linearmodels (>=6.1,<7.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "contextily (>=1.6.2,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "adjusttext (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
